Fix colors on App

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -4,7 +4,7 @@ header {
     align-items: center;
     padding-left: 20px;
     height: 65px;
-    background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
+    background: linear-gradient(90deg, #301f8d 1.18%, #4c18da 100%);
     color:white;
 }
 
