--- a/src/css/Images.css
+++ b/src/css/Images.css
@@ -5,8 +5,15 @@
     scroll-snap-type: x mandatory;
     overflow-x: scroll;
     display: flex;
+    /* margin-top: 10px; */
 }
 
+
+@media only screen and (min-width: 768px) {
+    .images-carousel {
+        margin-top: 20px;
+    }
+}
 .images {
     height: 5rem;
     object-fit: contain;
