Improve UI, fix some bugs, ico and logo images changed

--- a/src/css/Images.css
+++ b/src/css/Images.css
@@ -20,6 +20,7 @@
     border: 2px solid rgba(128, 128, 128, 0.116);
     scroll-snap-align: center;
     cursor: pointer;
+    position: relative;
     /* height: 10rem; */
 }
 
